Lump under SegmentAllocator